<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#79be42"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />

    <ScrollView

       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/scrollView"
       android:fitsSystemWindows="true">

      <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

          <!--  Your doctor -->

          <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/doctor"
            android:gravity="center"
            android:textSize="50sp"
            android:textColor="#79be42"
            android:textStyle="bold"
            android:id="@+id/tvDoctor"
              tools:ignore="UnknownId" />

          <!--  Some information -->

          <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
              android:layout_marginTop="10dp"
            android:text="@string/information"
            android:gravity="center"
            android:textColor="#79be42"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/tvInformation" />

             <!--  First name Label -->

           <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
               android:textColorHint="#79be42">
               <EditText
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPersonName"
                  android:ems="10"
                  android:id="@+id/etphNum1"
                  android:layout_below="@+id/tvInformation"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:hint="@string/docfirName" />
           </android.support.design.widget.TextInputLayout>

                <!--  Last name Label -->

           <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
               android:textColorHint="#79be42">
              <EditText
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:ems="10"
                 android:id="@+id/etphNum2"
                 android:layout_below="@+id/etphNum1"
                 android:layout_alignLeft="@+id/etphNum1"
                 android:layout_alignStart="@+id/etphNum1"
                 android:hint="@string/docLasName" />
           </android.support.design.widget.TextInputLayout>


                <!--  Mobile number Label -->
          <android.support.design.widget.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColorHint="#79be42">
                <EditText
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:inputType="phone"
                   android:ems="10"
                   android:id="@+id/etPhNum3"
                   android:layout_below="@+id/etphNum2"
                   android:layout_marginTop="7dp"
                   android:layout_alignLeft="@+id/etphNum2"
                   android:layout_alignStart="@+id/etphNum2"
                   android:layout_alignParentRight="true"
                   android:layout_alignParentEnd="true"
                   android:hint="@string/docphNum" />
           </android.support.design.widget.TextInputLayout>

                 <!--  Address Label -->

          <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
              android:textColorHint="#79be42">
               <EditText
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPostalAddress"
                  android:ems="10"
                  android:id="@+id/etAdderss"
                  android:layout_alignParentRight="true"
                  android:layout_alignParentEnd="true"
                  android:layout_below="@+id/etPhNum3"
                  android:layout_alignLeft="@+id/etPhNum3"
                  android:layout_alignStart="@+id/etPhNum3"
                  android:layout_marginTop="7dp"
                  android:hint="@string/docAdderss" />
           </android.support.design.widget.TextInputLayout>

                <!--  Email Label -->
          <android.support.design.widget.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColorHint="#79be42">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/etdocEmail"
                    android:layout_marginTop="7dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/etAdderss"
                    android:layout_alignLeft="@+id/etAdderss"
                    android:layout_alignStart="@+id/etAdderss"
                    android:hint="@string/docEmail" />
           </android.support.design.widget.TextInputLayout>

          <!--  Doctor ID -->
          <android.support.design.widget.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColorHint="#79be42">
             <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/doctorId"
                android:hint="@string/docId"
                android:textColorHint="@color/green" />
          </android.support.design.widget.TextInputLayout>

          <!--  Next Button -->
          <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/nextBottin"
            android:textSize="30sp"
            android:background="#79be42"
            android:textColor="#ffff"
            android:gravity="center"
            android:id="@+id/btnNext"
            android:layout_marginTop="15dp" />


    </LinearLayout>

</ScrollView>

</LinearLayout>